# JNI_Test

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jni_test001/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/jni_test001/: JNIUtil.java  JniDemo.java  MainActivity.java
app/src/main/jni/: com_jni_test001_JNIUtil.cpp  com_jni_test001_JNIUtil.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jni_test001/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
